whitespace fix

--- a/bigcheck.css
+++ b/bigcheck.css
@@ -12,7 +12,7 @@
 	cursor: pointer;
 
 	/* disable double click selection */
-	-webkit-user-select: none; /* Chrome/Safari */        
+	-webkit-user-select: none; /* Chrome/Safari */
 	   -moz-user-select: none; /* Firefox */
 	    -ms-user-select: none; /* IE10+ */
 }
@@ -30,15 +30,14 @@
 .bigcheck + label:before {
 	content: '';
 	position: absolute;
-	left: 0; 
+	left: 0;
 	top: 0;
-	width: 19px; 
+	width: 19px;
 	height: 19px;
 	border: 1px solid #aaa;
 	background: #f8f8f8;
 	border-radius: 3px;
-	box-shadow: inset 0 1px 3px rgba(0,0,0,.3)
-;
+	box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
 }
 
 
